# JOSE_paper

./: .env.example  .gitignore  .mailmap  2025-lab-9.qmd  BSMM_8740_lab_9_starter.qmd  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  batch_grade.py  conftest.py  environment.yml  grade_student.py  grader_instructions.txt  grading_context.py  pyproject.toml  requirements.txt
Python/: batch_grade.py  grade_student.py  grader_instructions.txt  grading_context.py  reliability_test.py  rubric_instructions.txt
R/: Untitled  aggregate_results.R  chat_grading_runner.R  json_build.R  oaii_grading_assistant.R  oaii_grading_assistant_runner.R  reliability_test.R  utils.R
R assignments/: README.md  assistant_config.json  lab_9_starter.qmd  r_chat_lab4_grades_orig.csv  selected_students.csv
R vs python/: README.md
assignment/: BSMM_8740_lab_9_solutions.qmd  BSMM_8740_lab_9_starter.html  assistant_config.json  comparison_summary.csv  lab_4_comparison_summary.csv  lab_4_rubric.json  lab_4_solutions.qmd  lab_4_starter.qmd  lab_9_starter.qmd  rubric_schema.json
docs/: ci_testing_overview.md  pipeline_comparison.md  python_pipeline_overview.md  r_pipeline_overview.md  reliability_results_summary.md  session_notes_2026_03_11.md  session_notes_2026_03_12.md  session_notes_2026_03_30.md  session_notes_2026_03_31.md  software_documentation.md
figures/: control_flow.tex  control_flow_combined.tex  control_flow_python.tex  control_flow_python_content.tex  control_flow_r.tex  control_flow_r_content.tex
notes/: README.md  jose_paper_log.md
paper/: .gitignore  old_paper.md  (+6 more)
(+31 files in other folders)
